# anoncreds.vc

./: .gitignore  Dockerfile  README.md  app.db  config.py  main.py  pyproject.toml
agent/: Dockerfile  configs.yml
app/: __init__.py  operations.py  utils.py
app/models/: demo.py
app/routes/exchanges/: __init__.py
app/routes/webhooks/: __init__.py
app/services/: agent.py  askar.py
app/templates/components/: actions.jinja  connection.jinja  credential.jinja  wizard_header.jinja
app/templates/components/modals/: identifiers.jinja  invitation.jinja  preview.jinja
app/templates/components/scripts/: exchanges.jinja  sync.jinja
app/templates/layouts/: base.jinja  base.min.jinja
app/templates/pages/: index copy.jinja  index.jinja  offer.jinja  request.jinja  resource.jinja  verify.jinja
app/templates/pages/wizard/: connection.jinja  issuance.jinja  results.jinja  revocation.jinja  verification.jinja
app/templates/samples/: badges.html  marketing.html  steps.html  tabler.html  widgets.html  wizard.html
